# insighta-portfolio-importer

./: .gitignore  CLAUDE.md  LICENSE  README.ai.md  README.md  main.py  pyproject.toml
sbi/: analyzer.py  api.py  cli.py  i18n.py  parser.py  parser_v2.py
templates/: credentials.yaml  deposit.csv  distribution.csv  project.yaml  rate.csv  ratio.csv  seed.csv  transfer.csv
tests/: test_merge_groups.py
